force-app/main/default/objects/StudentGroupMember__c/StudentGroupMember__c.object-meta.xml
<CustomObject>
    <label>Student Group Member</label>
    <nameField>
        <displayFormat>M-{0000}</displayFormat>
        <label>Group Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Student Group Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>