force-app/main/default/objects/StudentGroupMember__c/fields/Degree__c.field-meta.xml
<CustomField>
    <fullName>Degree__c</fullName>
    <formula>TEXT( Student__r.Degree__c )</formula>
    <label>Degree</label>
    <type>Text</type>
</CustomField>