force-app/main/default/objects/StudentGroupMember__c/fields/FormOfStudy__c.field-meta.xml
<CustomField>
    <fullName>FormOfStudy__c</fullName>
    <formula>TEXT(Student__r.FormOfStudy__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Form of Study</label>
    <type>Text</type>
</CustomField>