force-app/main/default/objects/StudentGroupMember__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <label>Group</label>
    <referenceTo>StudentGroup__c</referenceTo>
    <relationshipLabel>Students</relationshipLabel>
    <relationshipName>GroupMembers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>