force-app/main/default/objects/StudentGroupMember__c/fields/StudentID__c.field-meta.xml
<CustomField>
    <fullName>StudentID__c</fullName>
    <formula>Student__r.StudentID__c</formula>
    <label>Student ID</label>
    <type>Text</type>
</CustomField>